# transfermarkt-api-wrapper

./: .gitignore  README.md  pyproject.toml
transfermarkt_api_wrapper/: main.py
transfermarkt_api_wrapper/clubs/: clubs.py
transfermarkt_api_wrapper/competitions/: competitions.py
transfermarkt_api_wrapper/pandas/competitions/: competitions.py
transfermarkt_api_wrapper/pandas/players/: players.py
transfermarkt_api_wrapper/players/: players.py
