[tool.poetry]
name = "transfermarkt-api-wrapper"
version = "0.1.5"
description = "Lightweight wrapper for Transfermarkt API"
authors = ["Felipe Allegretti <felipe@allegretti.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "transfermarkt_api_wrapper"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pandas = "^1.5.3"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
jupyter = "^1.0.0"

[tool.black]
line-length = 120
verbose = true
preview = true

[tool.isort]
profile = "black"